# crypto_research_watchlist

./: .env.example  .gitignore  README.md  START_HERE.md  config.example.yml  config.yml  pyproject.toml  run
.github/workflows/: aggressive-overnight.yml  backfill.yml  daily.yml  intraday.yml  learning-summary.yml  passive-daily.yml
data/historical/: README.md  calibration_2026-05-02.json  prices_daily.parquet  quality.json  symbols.json  threshold_calibration_2026-05-04.json
docs/: API_RESEARCH.md  CRYPTO_VS_STOCKS.md  DECISION_ENGINE.md  PLAN.md  RESEARCH.md  SIGNALS.md  SOURCES_EXPANSION.md
intraday_log/: README.md
reports/: baseline_backtest_2026-05-02.md  learning_summary_2026-05-02.md  learning_summary_2026-05-03.md  learning_summary_2026-05-10.md  learning_summary_2026-05-17.md  watchlist_2026-05-02.json  watchlist_2026-05-02.md  watchlist_2026-05-03.json  watchlist_2026-05-03.md  watchlist_2026-05-04.json  watchlist_2026-05-04.md  watchlist_2026-05-05.json  watchlist_2026-05-05.md  watchlist_2026-05-06.json  watchlist_2026-05-06.md  watchlist_2026-05-07.json  watchlist_2026-05-07.md  watchlist_2026-05-08.json  watchlist_2026-05-08.md  watchlist_2026-05-09.json  watchlist_2026-05-09.md  watchlist_2026-05-10.json  watchlist_2026-05-10.md  watchlist_2026-05-11.json  watchlist_2026-05-11.md  watchlist_2026-05-12.json  watchlist_2026-05-12.md  watchlist_2026-05-13.json  watchlist_2026-05-13.md  watchlist_2026-05-14.json  watchlist_2026-05-14.md  watchlist_2026-05-15.json  watchlist_2026-05-15.md  watchlist_2026-05-16.json  watchlist_2026-05-16.md  watchlist_2026-05-17.json  watchlist_2026-05-17.md
research/assets/: README.md
research_log/: README.md
routines/: README.md  asset_rotation.routine.yml  daily_calibration.routine.yml  intraday_scan.routine.yml  kickoff.routine.yml
scripts/: probe_etherscan.py
scripts/research/: _run_backfill.sh  backfill_history.py  baseline_backtest.py  calibration_sweep.py  lib_calibration.py  threshold_calibration.py
src/crypto_research_watchlist/: __init__.py  __main__.py  candidates.py  cli.py  config.py  db.py  decisions.py  diagnose.py  models.py  pipeline.py  risk.py  scoring.py  universe.py
tests/: conftest.py  test_aggressive.py  test_backfill_incremental.py  test_calibration_sweep.py  test_candidates.py  test_coingecko_provider.py  test_decisions.py  test_diagnose_command.py  test_diagnose_output_smoke.py  test_etherscan_provider.py  test_funding_provider.py  test_intraday.py  test_learning_summary.py  test_news_cryptocompare.py  test_news_sentiment.py  test_news_sources.py  test_news_store.py  test_notifier_aggressive.py  test_notifier_passive.py  test_notifiers.py  test_onchain_provider.py  test_openinterest_provider.py  test_paper_broker.py  test_passive.py  test_pipeline.py  test_pipeline_market_summary.py  test_risk.py  test_runner.py  test_scoring.py  test_signals_funding.py  test_signals_orchestrator.py  test_signals_technical.py  test_smoke.py  test_supervisor.py  test_telegram_render.py  test_telegram_render_institutional.py  test_telegram_render_market_summary.py  test_telegram_render_rotation.py  test_threshold_calibration_smoke.py  test_universe.py
tests/integration/: test_coingecko_live.py  test_cryptocompare_live.py  test_etherscan_live.py  test_etherscan_probe.py  test_local_run.py
(+32 files in other folders)
