[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto_research_watchlist"
version = "0.1.0"
description = "Local 24/7 research watchlist generator for top-cap cryptocurrencies. Decision support, not advice."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Crypto Research Watchlist" }]
license = { text = "MIT" }
dependencies = [
    "pandas>=2.1",
    "numpy>=1.26",
    "pyarrow>=17.0",
    "yfinance>=0.2.40",
    "ccxt>=4.2",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    "python-dateutil>=2.9",
    "python-dotenv>=1.0",
    "SQLAlchemy>=2.0",
    "APScheduler>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
crypto-research-watchlist = "crypto_research_watchlist.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "C90"]
ignore = ["E501", "B008", "B904", "B019", "C901"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_configs = true
